# Kaggle-DeepFakes

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LESSONS_LEARNED.md  Makefile  PRODUCTION_SETUP.md  README.md  VALIDATION_REPORT.md  config.example.yaml  dmap_prepare_basic.py  dmap_prepare_v1.py  dmap_prepare_v2.py  dmap_prepare_v3.py  dmap_v4_dat.py  dmap_v5_p0.py  dmap_v5_p1.py  dmap_v5_p2.py  dmap_v5_p3.py  dmap_v5_p4.py  kaggle_analysis.ipynb  kaggle_last.ipynb  pyproject.toml  requirements.txt  train.py
docs/workflows/: README.md  ci.yml  release.yml
model/: config.py  dataset.py  model.py
modelown/: checkpoint  ckpt-240.data-00000-of-00002  ckpt-240.index  ckpt-269.data-00000-of-00002  ckpt-269.index
scripts/: setup.sh  validate.py
src/deepfake_detector/: __about__.py  __init__.py  cli.py
src/deepfake_detector/core/: __init__.py  config.py  logger.py
src/deepfake_detector/inference/: __init__.py  predictor.py
src/deepfake_detector/model/: __init__.py  components.py  dtn.py  layers.py  loss.py
src/deepfake_detector/training/: __init__.py  trainer.py
src/deepfake_detector/utils/: __init__.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_layers.py  test_loss.py  test_model.py
xDeepFake-Test/: deepFake_test_video.py  deepFake_test_video_decision.py
xDeepFake-Test/model/: config.py  dataset.py  dtn.py  loss.py  model.py  utils.py
