[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepfake-detector"
version = "1.0.0"
description = "Advanced Deep Tree Network for DeepFake Detection with State-of-the-Art Performance"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["deepfake", "detection", "deep-learning", "tensorflow", "face-anti-spoofing", "computer-vision"]
authors = [
    { name = "Umit Kacar", email = "umitkacar@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "tensorflow>=2.4.0,<2.16.0",
    "numpy>=1.19.5",
    "opencv-python>=4.5.0",
    "Pillow>=8.1.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "tqdm>=4.60.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",        # Parallel test execution
    "pytest-timeout>=2.1.0",       # Test timeouts
    "pytest-benchmark>=4.0.0",     # Performance benchmarks
    "pytest-randomly>=3.12.0",     # Random test order
    # Code Quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    # Type Stubs
    "types-pyyaml>=6.0.0",
    "types-pillow>=10.0.0",
    # Development
    "ipython>=8.0.0",
    "ipdb>=0.13.13",              # IPython debugger
]
gpu = [
    "tensorflow-gpu>=2.4.0,<2.16.0",
]
viz = [
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]

[project.urls]
Documentation = "https://github.com/umitkacar/Kaggle-DeepFakes#readme"
Issues = "https://github.com/umitkacar/Kaggle-DeepFakes/issues"
Source = "https://github.com/umitkacar/Kaggle-DeepFakes"

[project.scripts]
deepfake-detector = "deepfake_detector.cli:app"
dfd = "deepfake_detector.cli:app"

[tool.hatch.version]
path = "src/deepfake_detector/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deepfake_detector"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-pyyaml",
]

[tool.hatch.envs.default.scripts]
# Testing
test = "pytest {args:tests}"
test-fast = "pytest -n auto {args:tests}"  # Parallel execution
test-cov = "pytest --cov=src/deepfake_detector --cov-report=term-missing {args:tests}"
test-cov-html = "pytest --cov=src/deepfake_detector --cov-report=html {args:tests}"
test-cov-xml = "pytest --cov=src/deepfake_detector --cov-report=xml {args:tests}"
test-all = [
    "test-fast",
    "test-cov-html",
]

# Code Quality
fmt = [
    "ruff --fix {args:.}",
    "black {args:.}",
]
fmt-check = [
    "ruff {args:.}",
    "black --check {args:.}",
]
lint = [
    "ruff {args:.}",
    "black --check {args:.}",
    "mypy {args:src/deepfake_detector}",
]
type = "mypy {args:src/deepfake_detector tests}"

# Combined
check = [
    "fmt-check",
    "type",
    "test-fast",
]
all = [
    "fmt",
    "lint",
    "test-cov",
]

# Black configuration
[tool.black]
target-version = ["py38", "py39", "py310", "py311"]
line-length = 100
skip-string-normalization = false
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# Ruff configuration
[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "YTT",   # flake8-2020
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PL",    # pylint
    "TRY",   # tryceratops
    "RUF",   # ruff-specific
]
ignore = [
    "E501",    # line too long, handled by black
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "W191",    # indentation contains tabs
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "S101",    # use of assert detected
    "TRY003",  # avoid specifying long messages outside exception class
    "COM812",  # trailing comma missing (conflicts with black)
    "ISC001",  # implicit string concatenation (conflicts with formatter)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "PLR2004", # magic values allowed in tests
    "ARG001",  # unused arguments in fixtures
]

[tool.ruff.isort]
known-first-party = ["deepfake_detector"]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.pylint]
max-args = 8
max-branches = 15

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tensorflow.*",
    "cv2.*",
    "numpy.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",                          # Show summary of all test outcomes
    "--strict-markers",             # Strict marker checking
    "--strict-config",              # Strict config checking
    "--showlocals",                 # Show local variables in tracebacks
    "--tb=short",                   # Shorter tracebacks
    "--cov-report=term-missing",    # Coverage report with missing lines
    "--cov-branch",                 # Branch coverage
    "--cov-fail-under=80",          # Fail if coverage < 80%
    "--maxfail=3",                  # Stop after 3 failures
    "--timeout=300",                # 5 minute timeout per test
    "-vv",                          # Verbose output
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmark performance tests",
]
filterwarnings = [
    "error",                        # Turn warnings into errors
    "ignore::DeprecationWarning",   # Ignore deprecation warnings
    "ignore::PendingDeprecationWarning",
]
norecursedirs = [
    ".git",
    ".tox",
    "dist",
    "build",
    "*.egg",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "src/deepfake_detector/__about__.py",
    "tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Bandit security checks configuration
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101"]  # Skip assert_used in tests
targets = ["src/deepfake_detector"]
